config/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-echo-go
spec:
  selector:
    app: my-echo-go
  ports:
    - protocol: TCP
      port: 18080
      targetPort: 8080
  type: ClusterIP
