config/ingress/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-shd
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/issuer: intermediate-issuer
  name: my-echo-go-tls
spec:
  rules:
    - host: my-echo-go-tls.172.22.11.10.nip.io
      http:
        paths:
          - pathType: Prefix
            path: /echo(/|$)(.*)
            backend:
              service:
                name: my-echo-go
                port:
                  number: 18080
  tls:
    - hosts:
        - my-echo-go-tls.172.22.11.10.nip.io
      secretName: my-echo-go-ingress-tls
