config/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-shd
#    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: intermediate-issuer
  name: my-echo-go
spec:
  rules:
    - host: my-echo-go.172.22.11.10.nip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: my-echo-go
                port:
                  number: 18080
  tls:
    - hosts:
        - my-echo-go.172.22.11.2.nip.io
      secretName: my-echo-go-ingress-tls
